upload images functionality (#2)
* Can take any image input from device
* Image will be resized to 433 x 433 and displayed
* Sample images are known as a guide
* Images have an accented border around them

--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ body {
 
 .btn {
     height: 175%;
-    width: 75%;
+    width: 77%;
     background-color: #1D7874;
 }
 
@@ -98,4 +98,8 @@ body {
 
 .margin-10 {
     margin: 10px;
+}
+
+img {
+    border: 5px solid #1D7874;
 }
